--- a/rootdir/etc/vendor.sensors.qti.rc
+++ b/rootdir/etc/vendor.sensors.qti.rc
@@ -1,14 +1,17 @@
-#!/vendor/bin/sh
-# Copyright (c) 2020 The Linux Foundation. All rights reserved.
+# Copyright (c) 2019 Qualcomm Technologies, Inc.
+# All Rights Reserved.
+# Confidential and Proprietary - Qualcomm Technologies, Inc.
+#
+# Copyright (c) 2009-2012, 2014-2019, The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
-#     * Redistributions of source code must retain the above copyright
+#     # Redistributions of source code must retain the above copyright
 #       notice, this list of conditions and the following disclaimer.
-#     * Redistributions in binary form must reproduce the above copyright
+#     # Redistributions in binary form must reproduce the above copyright
 #       notice, this list of conditions and the following disclaimer in the
 #       documentation and/or other materials provided with the distribution.
-#     * Neither the name of The Linux Foundation nor
+#     # Neither the name of The Linux Foundation nor
 #       the names of its contributors may be used to endorse or promote
 #       products derived from this software without specific prior written
 #       permission.
@@ -26,8 +29,12 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-#
-# Function to start sensors for SSC enabled platforms
-#
-cp /vendor/etc/sensors/scripts/* /data/vendor/sensors/scripts/
-chmod a+rw /data/vendor/sensors/scripts/*
+service vendor.sensors.qti /vendor/bin/sensors.qti
+    class core
+    user system
+    group system
+
+service vendor-sensor-sh /vendor/bin/init.qcom.sensors.sh
+    class late_start
+    user root
+    oneshot
